2013-07-20  Maurice Berk <maurice@mauriceberk.com>

    * DESCRIPTION: Package version is now 0.8, required R version is now >= 2.15.2

    * src/LapackSubset.f: removed

    * src/Makevars: added $(LAPACK_LIBS) to PKG_LIBS and removed PKG_FFLAGS

2013-04-03  Maurice Berk <maurice@mauriceberk.com>

    * DESCRIPTION: Version is now 0.7

    * src/SME.c: fixed a missing guard around OpenMP code

2013-04-03  Maurice Berk <maurice@mauriceberk.com>

    * DESCRIPTION: Date is now 2013-04-03, Version is now 0.6

    * GPL-3, LICENCE: removed unnecessary files

    * man/*.Rd: updated author's email address, removed reference to LICENCE file

    * man/sme.Rd: removed an example to speed up the runtime

    * src/*.c: updated author's email address in comments

    * src/*.h: updated author's email address in comments

2013-04-02  Maurice Berk <maurice@mauriceberk.com>

    * DESCRIPTION: Date is now 2013-04-02, Version is now 0.5, author's email address updated

    * src/SME.c: OpenMP code is now properly guarded to ensure it's supported by the compiler

    * vignettes/Tutorial.Rnw: added a sentence explaining that OpenMP may not be supported depending
    on the platform

2012-09-18  Maurice Berk <maurice@mauriceberk.com>

    * DESCRIPTION: Date is now 2012-09-18

    * vignettes/Tutorial.Rnw: updated description of OpenMP functionality to reflect the default
    behaviour changing from using two threads to letting the OpenMP system automatically handle the
    number of threads. Fixed a broken reference to one of the plots

2012-09-04  Maurice Berk <maurice@mauriceberk.com>

    * DESCRIPTION: Date is now 2012-09-04

    * src/*.f: collated all individual LAPACK routines into a single file, LapackSubset.f

    * man/sme.list.Rd: updated documentation for sme.list to reflect the new default value for the
    parameter numberOfThreads

    * src/LinearAlgebra.c: changed to UNIX line endings

    * src/NelderMead.c: changed to UNIX line endings
