@@ -1,6 +1,6 @@
 Package: sme
-Version: 0.8
-Date: 2013-07-20
+Version: 0.9
+Date: 2013-09-29
 Title: Smoothing-splines Mixed-effects Models
 Authors@R: c(person("Maurice", "Berk", email="maurice@mauriceberk.com",role=c("aut","cre")))
 Depends: R (>= 2.15.2), splines, lattice, stats
