@@ -5,8 +5,8 @@
 \title{Carry out mulitple independent smoothing-splines mixed-effects model fits simultaneously}
 \usage{
 \method{sme}{list}(object,tme,ind,verbose=F,lambda.mu=NULL,lambda.v=NULL,maxIter=500,
-knots=NULL,zeroIntercept=F,deltaEM=1e-3,deltaNM=1e-3,criteria="AICc",
-numberOfThreads=-1,\dots)
+knots=NULL,zeroIntercept=F,deltaEM=1e-3,deltaNM=1e-3,criteria="AICc",initial.lambda.mu=10000,
+initial.lambda.v=10000,numberOfThreads=-1,\dots)
 }
 \alias{sme.list}
 \arguments{
@@ -30,6 +30,10 @@ numberOfThreads=-1,\dots)
   \item{deltaNM}{(relative) convergence tolerance for the Nelder-Mead optimisation}
   \item{criteria}{one of \code{"AICc"}, \code{"AIC"}, \code{"BICN"} or \code{"BICn"} indicating
   which criteria to use to score a particular combination of \code{lambda.mu} and \code{lambda.v} in
+  the Nelder-Mead search}
+  \item{initial.lambda.mu}{value to initialise the smoothing parameter for the fixed-effects to in
+  the Nelder-Mead search}
+  \item{initial.lambda.v}{value to initialise the smoothing parameter for the random-effects to in
   the Nelder-Mead search}
   \item{numberOfThreads}{The number of threads to use to fit the multiple smoothing-splines
   mixed-effects models simultaneously. When \code{numberOfThreads=-1}, as is the default, the
